# my-simple-rest-service

documentation/: docs.json
server/: pyproject.toml
server/server/advertisements/: manage.py
server/server/advertisements/advertisement/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/server/advertisements/advertisement/migrations/: 0001_initial.py  0002_auto_20191101_0906.py  0003_advertisement_owner.py  0004_auto_20191102_1811.py  0005_auto_20191102_1842.py
server/server/advertisements/advertisements/: settings.py  urls.py  wsgi.py
